force-app/main/default/objects/ContentVersion/fields/APXT_Redlining__Checkout_By__c.field-meta.xml
<CustomField>
    <fullName>APXT_Redlining__Checkout_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checkout By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Content_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>