force-app/main/default/objects/ContentVersion/fields/APXT_Redlining__Checkout_Date__c.field-meta.xml
<CustomField>
    <fullName>APXT_Redlining__Checkout_Date__c</fullName>
    <label>Checkout Date</label>
    <type>DateTime</type>
</CustomField>