force-app/main/default/objects/ContentVersion/fields/APXT_Redlining__CongaFileCode__c.field-meta.xml
<CustomField>
    <fullName>APXT_Redlining__CongaFileCode__c</fullName>
    <description>Computed Code used to validate record consistency</description>
    <label>Conga File Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>