force-app/main/default/objects/ContentVersion/fields/APXT_Redlining__CongaFileID__c.field-meta.xml
<CustomField>
    <fullName>APXT_Redlining__CongaFileID__c</fullName>
    <externalId>true</externalId>
    <label>Conga File ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>