force-app/main/default/objects/ContentVersion/fields/APXT_Redlining__CongaFileUniqueID__c.field-meta.xml
<CustomField>
    <fullName>APXT_Redlining__CongaFileUniqueID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Conga File Unique ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>