force-app/main/default/objects/ContentVersion/fields/APXT_Redlining__CongaFileVersionID__c.field-meta.xml
<CustomField>
    <fullName>APXT_Redlining__CongaFileVersionID__c</fullName>
    <description>Used to track the version information for the external file repository</description>
    <externalId>true</externalId>
    <label>Conga File Version ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>