force-app/main/default/objects/ContentVersion/fields/APXT_Redlining__CongaModifiedByEmail__c.field-meta.xml
<CustomField>
    <fullName>APXT_Redlining__CongaModifiedByEmail__c</fullName>
    <label>Conga Modified By Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>