force-app/main/default/objects/ContentVersion/fields/APXT_Redlining__CongaModifiedByUserid__c.field-meta.xml
<CustomField>
    <fullName>APXT_Redlining__CongaModifiedByUserid__c</fullName>
    <label>Conga Modified By Userid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>