force-app/main/default/objects/ContentVersion/fields/APXT_Redlining__ContentDocumentIdHistory2__c.field-meta.xml
<CustomField>
    <fullName>APXT_Redlining__ContentDocumentIdHistory2__c</fullName>
    <description>Used to store a list of previous content document ids</description>
    <label>Conga Content Document Id History 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>