force-app/main/default/objects/ContentVersion/fields/APXT_Redlining__Is_Mergeservice_File__c.field-meta.xml
<CustomField>
    <fullName>APXT_Redlining__Is_Mergeservice_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Mergeservice File</label>
    <type>Checkbox</type>
</CustomField>