force-app/main/default/objects/ContentVersion/fields/APXT_Redlining__IsCongaFileExcludedFromSync__c.field-meta.xml
<CustomField>
    <fullName>APXT_Redlining__IsCongaFileExcludedFromSync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Conga File is excluded from synchronizing with external system. Used when external system no longer keeps track of this file.</description>
    <inlineHelpText>Check to prevent this file to being sent as part of an outbound message.</inlineHelpText>
    <label>Conga File Excluded From Sync</label>
    <type>Checkbox</type>
</CustomField>