force-app/main/default/objects/ContentVersion/fields/disco__Mobile_Id__c.field-meta.xml
<CustomField>
    <fullName>disco__Mobile_Id__c</fullName>
    <description>mobile Id</description>
    <inlineHelpText>mobile Id</inlineHelpText>
    <label>Mobile Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>